# zinix

./: .gitignore  README.md
bootloader/: new_opensbi.elf
kernel/: Cargo.toml  build.rs  kernel-build.py  kflash.py
kernel/platform/k210/: linker.ld
kernel/platform/qemu/: linker.ld
kernel/src/: compile.rs  console.rs  consts.rs  entry.asm  logger.rs  main.rs  sbi.rs  test.rs  timer.rs  utils.rs
kernel/src/asm/: mod.rs  riscv.asm
kernel/src/fs/: dfile.rs  fat.rs  fcntl.rs  inode.rs  mod.rs  pipe.rs  poll.rs  superblock.rs
kernel/src/io/: mod.rs  sdcard.rs  virtio.rs
kernel/src/mm/: addr.rs  aux.rs  bitmap.rs  buddy.rs  kmap.rs  mm.rs  mod.rs  page.rs  pagetable.rs  vma.rs
kernel/src/pre/: mod.rs
kernel/src/sync/: cpu_local.rs  mod.rs
kernel/src/syscall/: mod.rs  sys_fs.rs  sys_proc.rs
kernel/src/task/: info.rs  mod.rs  stack.rs  switch_context.s  task.rs
kernel/src/trap/: mod.rs  timer.rs  trap_asm.s
libc-test/: Makefile
