[package]
name = "kernel"
version = "0.0.1"
edition = "2018"

[dependencies]
riscv = "0.7.0"
log = "0.4.16"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = { version = "0.6.0"}
bitflags = "1.3.2"
fatfs = {path = "../deps/rust-fatfs", features=["alloc"], default-features=false}
bitmaps = { version = "3.1.0" ,default-features=false}



[features]
default=["qemu","debug"]
qemu=[]
k210=[]
debug=[]