[package]
name = "kernel"
version = "0.0.1"
edition = "2018"

[dependencies]
#riscv = { path = "../deps/riscv" , features = ["inline-asm"]}
riscv = { version="0.7.0" }
log = "0.4.16"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = { version = "0.6.0"}
bitflags = "1.3.2"
fatfs = {path = "../deps/rust-fatfs", features=["alloc","log_level_trace","lfn"], default-features=false}
virtio-drivers = {path = "../deps/virtio-drivers"}
k210-pac = { path = "../deps/k210-pac" }
k210-hal = { path = "../deps/k210-hal" }
k210-soc = { path = "../deps/k210-soc" }
xmas-elf = "0.8.0"

[features]
default=["qemu"]
qemu=[]
k210=[]
debug=[]